<resources>
    <string name="app_name">Weather</string>
    <string name="wind">Wind</string>
    <string name="feels">Feels</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="precipitation">Precipitation</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="saved">Saved</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="belarusian">Belarusian</string>
    <string name="nightMode">NightMode</string>
    <string name="units">Units</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="automatic">How in the system</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="noInternetConnection">No internet connection</string>
    <string name="noGPS">No GPS access</string>
    <string name="noCity">Could not find such a settlement</string>
    <string name="noException">OK</string>
    <string name="error">Something went wrong :( Please try later</string>
    <string name="percentage">%</string>
    <string name="millimeters">mm</string>
    <string name="metersPerSeconds">m/s</string>
    <string name="useNewGeolocation">"Use a new geolocation?"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="noGpsPermisson">"No location permission, turn on"</string>
    <string name="url">"https://api.openweathermap.org/data/2.5/"</string>
</resources>