<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.weatherapp.BindingConvertions"/>
        <variable
            name="weatherdata"
            type="com.example.weatherapp.network.WeatherData" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/custom_ripple">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".75" />

            <ImageView
                android:id="@+id/image_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/ic_na"
                app:weatherImage="@{weatherdata}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/place_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:text="@{BindingConvertions.setPlaceName(weatherdata)}"
                tools:text="Minsk"
                app:layout_constraintEnd_toStartOf="@+id/country_tv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image_iv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="12sp"
                android:text="@{BindingConvertions.setDateTime(weatherdata)}"
                tools:text="16.11.2020 11:49"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image_iv"
                app:layout_constraintTop_toBottomOf="@+id/place_tv" />

            <TextView
                android:id="@+id/description_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{BindingConvertions.setDescription(weatherdata)}"
                tools:text="Облачно"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_iv"
                app:layout_constraintTop_toBottomOf="@+id/date_tv" />

            <TextView
                android:id="@+id/country_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:text="@{BindingConvertions.setCountry(weatherdata)}"
                tools:text="BY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/temp_tv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif"
                android:gravity="end|center_vertical"
                android:textSize="60sp"
                android:text="@{BindingConvertions.setTemp(weatherdata)}"
                tools:text="-10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toEndOf="@+id/image_iv"
                app:layout_constraintTop_toBottomOf="@+id/description_tv"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tempDesc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="20sp"
                android:text="@{BindingConvertions.setTempUnits(weatherdata)}"
                tools:text="C"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/temp_tv" />

            <TextView
                android:id="@+id/cloudsDescBottom_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudiness"
                android:textSize="8sp"
                app:layout_constraintBottom_toTopOf="@+id/pressureDesc_tv"
                app:layout_constraintStart_toStartOf="@+id/pressureDesc_tv"
                app:layout_constraintTop_toBottomOf="@+id/tempDesc_tv"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/clouds_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8sp"
                android:text="@{BindingConvertions.setClouds(weatherdata)}"
                tools:text="100%"
                app:layout_constraintBottom_toTopOf="@+id/pressureDesc_tv"
                app:layout_constraintStart_toEndOf="@+id/cloudsDescBottom_tv"
                app:layout_constraintTop_toTopOf="@+id/cloudsDescBottom_tv" />

            <TextView
                android:id="@+id/pressureDesc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8sp"
                android:text="@string/pressure"
                app:layout_constraintBottom_toTopOf="@+id/humidityDesc_tv"
                app:layout_constraintStart_toStartOf="@+id/humidityDesc_tv" />

            <TextView
                android:id="@+id/pressure_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8sp"
                android:text="@{BindingConvertions.setPreassure(context, weatherdata)}"
                tools:text="1000 mm"
                app:layout_constraintBottom_toTopOf="@+id/humidityDesc_tv"
                app:layout_constraintStart_toEndOf="@+id/pressureDesc_tv"
                app:layout_constraintTop_toTopOf="@+id/pressureDesc_tv" />

            <TextView
                android:id="@+id/humidityDesc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="8sp"
                android:text="@string/humidity"
                app:layout_constraintBottom_toTopOf="@+id/windSpeedDesc_tv"
                app:layout_constraintStart_toEndOf="@+id/temp_tv" />

            <TextView
                android:id="@+id/humidity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8sp"
                android:text="@{BindingConvertions.setHumidity(weatherdata)}"
                tools:text="90%"
                app:layout_constraintBottom_toTopOf="@+id/windSpeed_tv"
                app:layout_constraintStart_toEndOf="@+id/humidityDesc_tv"
                app:layout_constraintTop_toTopOf="@+id/humidityDesc_tv" />

            <TextView
                android:id="@+id/windSpeedDesc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:textSize="8sp"
                android:text="@string/wind"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/humidityDesc_tv" />

            <TextView
                android:id="@+id/windSpeed_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:textSize="8sp"
                android:text="@{BindingConvertions.setWindSpeed(context, weatherdata)}"
                tools:text="24 m/s"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/windSpeedDesc_tv"
                app:layout_constraintTop_toTopOf="@+id/windSpeedDesc_tv"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>